[package]
name = "candles-shared"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
console-log = []

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
serde_repr = "*"
num_enum = "*"
serde = "*"
chrono = "*"
serde_derive = "*"
serde_with = { version = "*", features = ["chrono"] }
serde_json = "*"
ahash = "*"